# points-in-circle

./: .clang-tidy  CMakeLists.txt  README.md  points-in-circle.cpp
.github/workflows/: ci.yml
include/: point_counter.h
src/: main.cpp  point_counter.cpp  points-in-circle.cpp
tests/: CMakeLists.txt  test_point_counter.cpp
